<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chefaholic</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="emailid">Email ID</string>
    <string name="mobilenumber">Mobile Number</string>
    <string name="name">Name</string>
    <string name="address">Address</string>
    <string name="confirmpasswd">Confirm Password</string>
    <string name="drawer_open">Open drawer</string>
    <string name="drawer_close">Close drawer</string>
    <string name="nooffollowers">No of followers</string>
    <string name="following">Follow</string>
    <string name="three">3</string>
    <string name="captureimage">Capture Image</string>
    <string name="upload">Upload</string>
    <string name="browse">Browse</string>
    <string name="filelocation">File Location</string>
    <string name="or">Or</string>
    <string name="receipename">Receipe Name</string>
    <string name="category">Category</string>
    <string name="clickhere">( Click here to see full description )</string>
    <string name="uploadedby">UploadedBy</string>
    <string name="ingredients">Ingredients</string>
    <string name="preparation">Preparation</string>
    <string name="receipe">Recipe</string>
    <string name="ingradients">Ingradients</string>
    <string name="preparations">Preparation</string>
    <string name="uploadeddate">Date</string>
    <string name="view">View</string>
    <string name="addtofavourate">Add To Favourate</string>
    <string name="showcomnts">Show Comments</string>
    <string name="searchtag">Enter your Search Tag</string>
    <string name="chicken">Chicken</string>
    <string name="mutton">Mutton</string>
    <string name="beef">Beef</string>
    <string name="pork">Pork</string>
    <string name="egg">Egg</string>
    <string name="potateos">Potateos</string>
    <string name="searchby">Search By Tag</string>
    <string name="searchs">Search</string>
    <string name="searchbydates">Search By Date</string>
    <string name="selectdate">Select Date</string>
    <string name="writecomment">Write Comment</string>
    <string name="addcomment">Add Comment</string>
    <string name="addcomments">Add/View Comments</string>
    <string name="date">Date</string>
    <string name="comments">Comments</string>
    <string name="confirmpassword">Confirm Password</string>
    <string name="newpassword">New Password</string>
    <string name="currentPassword">Current Password</string>
    <string name="changepassword">Change Password</string>
    <string name="recipiename">Recipie Name</string>
    <string name="ingredient">Ingrediants</string>
    <string name="making">Making</string>
    <string name="next">Next</string>
    <string name="veg">Veg</string>
    <string name="non">Non-Veg</string>
    <string name="addrecipie">Add Recipie</string>
    <string name="addstore">Add Store</string>
    

</resources>
