<LinearLayout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Black"
    android:orientation="vertical"
    tools:context=".MeterReadingActivity" >

    <ScrollView
        android:id="@+id/scrollView1"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_vertical">

        <LinearLayout
            android:id="@+id/LinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:orientation="vertical" >

            <LinearLayout
                android:id="@+id/childLinearLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/browseButton"
                    android:layout_width="200dp"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="@drawable/button_selector"
                    android:text="@string/browse"
                    android:textColor="@color/White"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical" >

                    <EditText
                        android:id="@+id/imagepathEditText"
                        android:layout_width="match_parent"
                        android:layout_height="44dp"
                        android:layout_marginBottom="10dp"
                        android:background="@drawable/reading_edit_text"
                        android:ems="10"
                        android:gravity="center"
                        android:hint="@string/filelocation"
                        android:paddingLeft="10dp"
                        android:paddingRight="10dp" >

                        <requestFocus />
                    </EditText>

                    <TextView
                        android:id="@+id/receipeNameTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginBottom="10dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/or"
                        android:textAppearance="?android:attr/textAppearanceLarge"
                        android:textColor="@color/white"
                        android:textStyle="italic"
                        android:visibility="gone" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/captureButton"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/button_selector"
                        android:text="@string/captureimage"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:visibility="gone" />

                    <ImageView
                        android:id="@+id/captureImageView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="10dp"
                        android:src="@drawable/capture_image_cam"
                        tools:ignore="ContentDescription" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:orientation="vertical" >

                    <Button
                        android:id="@+id/uploadButton"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:background="@drawable/button_selector"
                        android:text="@string/upload"
                        android:textColor="@color/white"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/taskCountTextView"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</LinearLayout>